TG-1834:On safari browser arrow issue in job order

--- a/tag_workflow/public/css/tag.css
+++ b/tag_workflow/public/css/tag.css
@@ -642,6 +642,7 @@ input::-webkit-credentials-auto-fill-button {
 }
 [data-page-route="Job Order"] .msg {
   cursor: pointer;
+  display: -webkit-flex;
 }
 [data-page-route="Job Order"] .msg:after {
   content: "\003E";
